# scikit-spark

./: .actrc  .gitignore  .travis.yml  README.md  Taskfile.yml  changelog.md  developer-notes.md  pyproject.toml  requirements-tests.txt  requirements.txt  setup.py
.github/: pipeline.yml
.github/workflows/: pipeline.yml
python/: env-setup.sh  run-doctests.sh  run-tests-with-doctests.sh  run-tests.sh  setup.py
python/skspark/: __init__.py  model_selection.py  spark_base_search_cv.py
python/skspark/sklearn_0_19/: model_selection.py  spark_base_search_cv.py
python/skspark/sklearn_0_20/: _search.py
python/skspark/sklearn_0_21/: _search.py
python/skspark/sklearn_0_22/: _search.py
python/skspark/sklearn_1/: _search.py
python/skspark/sklearn_1_1/: _search.py
python/skspark/sklearn_1_3/: _search.py
python/skspark/sklearn_1_4/: _search.py
python/skspark/sklearn_1_5/: _search.py
python/skspark/sklearn_1_7/: _search.py
python/skspark/sklearn_1_8/: _search.py
python/skspark/tests/: pyspark_test.py  spark_test.py  test_direct_comparison.py  test_model_selection.py
python/test/: basic_travis_spark_test.py  conftest.py  pyspark_test.py  resource_warning_tests.py  sklearn_version_specific_utils.py  test_direct_comparison.py  test_misc.py  test_model_selection.py  test_parameterised_tests.py  test_resource_warnings.py  test_search.py  test_sklearn.py  test_specific_regression_tests.py  utils.py
python/tests/: resource_warning_tests.py  test_direct_comparison.py  test_misc.py  test_model_selection.py  test_specific_regression_tests.py
